--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,10 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
-    <title>React Maze</title>
+    <title>React Maze task </title>
   </head>
   <body>
     <div id="root"></div>
   </body>
 </html>
+ 
